--- a/m'schanges.theme.css
+++ b/m'schanges.theme.css
@@ -113,7 +113,7 @@ div.unreadMentionsIndicatorBottom-3RJMnQ {
 }
 
 /* 🠗 server boost status icon 🠗 */
-.content__99f8c[aria-label="Channels"] > li:nth-of-type(2){
+.containerDefault_c69b6d.wrapper__2ea32.container__877f0{
     display: none;
 }
 
